--- a/src/blog.njk
+++ b/src/blog.njk
@@ -9,7 +9,7 @@ layout: 'base.njk'
 <div class="section container">
 <h1 class="section-title">Recent articles</h1>
 <ul role="list" class="articles__list flow">
-  {%- for post in collections.post | reverse -%} 
+  {%- for post in collections.post | reverse | limit(4) -%} 
   
 {% include 'article-snippet.njk' %}
   {%- endfor -%}
