--- a/src/index.njk
+++ b/src/index.njk
@@ -35,7 +35,7 @@ layout: 'base.njk'
     <h2 class="section-title text-center ">Featured articles</h2>
     <p class="text-center">Here is a sample of articles which I feel give you a good idea of what this site is all about.</p>
     <ul role="list" class="articles__list flow">
-  {%- for post in collections.featured | reverse | limit:2 -%}
+  {%- for post in collections.featured | reverse | limit(3) -%} 
   
 {% include 'article-snippet.njk' %}
   {%- endfor -%}
