--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 
-title: My homepage
+title: Webtactics Test
 layout: 'base.njk'
 
 ----
@@ -25,7 +25,7 @@ layout: 'base.njk'
         </div>
       </div>
       <div>
-        <img src="//unsplash.it/510" alt="" class="hero__image">
+        <img src="https://ik.imagekit.io/webtactics/changs/tr:w-400,h-400,q-80/images/slider/Rainbow-Rocky-Road-Landscape-2-1600x800.jpg" alt="" class="hero__image">
       </div>
   </div>
 </section>
