--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,6 +15,9 @@
           <li>
             <a href="/blog/">Blog</a>
           </li>
+            <li>
+            <a href="/services/">Services</a>
+          </li>
              <li>
             <a href="/contact/">Contact</a>
           </li>
