--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -14,7 +14,7 @@ layout: 'base.njk'
     {{ title }}
     </h1>
     <figure class="main-article__figure">
-      <img src="{{ image }}" alt="{{ imageAlt }}">
+      <img src="{{ image }}/tr:w-900,h-400" alt="{{ imageAlt }}">
       <figcaption>
      {{ imageAlt }}
       </figcaption>
