--- a/src/style.css
+++ b/src/style.css
@@ -385,3 +385,9 @@ section,
   color: var(--clr-neutral-100);
   background-color: var(--clr-neutral-900);
 }
+
+.grid-2-columns {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+}
