--- a/src/_includes/blog-summary.njk
+++ b/src/_includes/blog-summary.njk
@@ -3,11 +3,11 @@
 
 <div class="grid-2-columns">
 <div class="homeblogwrapper">
-<article class="snippet">
-<img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" class="snippet__image">
-<h3 class="snippet__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
-<p class="snippet__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
-<p class="snippet__body">{{ post.data.description }}</p> 
+<article class="blog-summary">
+<img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" class="blog__image">
+<h3 class="blog__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
+<p class="blog__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
+<p class="blog__body">{{ post.data.description }}</p> 
 <a href="{{ post.url }}" class="btn btn--primary">Continue Reading</a>
 </article>
 </div>
