--- a/src/style.css
+++ b/src/style.css
@@ -391,3 +391,9 @@ section,
   gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
 }
+
+.blog_image {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+}
