--- a/src/_includes/blog-summary.njk
+++ b/src/_includes/blog-summary.njk
@@ -4,7 +4,7 @@
 
 
 <article class="blog-summary">
-<img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" class="blog__image">
+<img class="blog__image" src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}">
 <h3 class="blog__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
 <p class="blog__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
 <p class="blog__body">{{ post.data.description }}</p> 
