--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/style.css">
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
-    <body>
+    <body class="{{ title }}">
  {% include 'header.njk' %}
  <main>
    {{ content | safe }}
