--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,10 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
+        <meta name="description" content="{{ meta }}">
         <link rel="stylesheet" href="/style.css">
+        {{ title }}
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
-    <body class=" {{ title }} ">
+    <body class=" {{ title }}  {{ class }} " >
  {% include 'header.njk' %}
  <main>
    {{ content | safe }}
