--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,7 +10,7 @@
         {{ title }}
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
-    <body class=" {{ title }}  {{ class }} " >
+    <body class=" {{ class }} " >
  {% include 'header.njk' %}
  <main>
    {{ content | safe }}
