--- a/src/services.njk
+++ b/src/services.njk
@@ -1,9 +1,9 @@
 ---
 
-title: Contact
+title: Services
 layout: 'base.njk'
-class: contact
-meta: Use this page to contact us
+class: services
+meta: Service us
 
 ----
 
