--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -2,7 +2,9 @@
 
 
 layout: 'base.njk'
-meta: 'description'
+meta:  {%- if pages.data.description %},
+        "description": "{{ pages.data.description }}"
+        {% endif %}
 class: blog
 
 ----
