--- a/src/services.njk
+++ b/src/services.njk
@@ -9,10 +9,10 @@ meta: Service us
 
        
 <div class="section container">
-<h1 class="section-title">Blog articles</h1>
+<h1 class="section-title">Services articles</h1>
 <div class="grid-2-columns">
 
-{%- for post in collections.post | reverse -%} 
+{%- for post in collections.services | reverse -%} 
   
 {% include 'blog-summary.njk' %}
 {%- endfor -%}
