--- a/src/services.njk
+++ b/src/services.njk
@@ -9,7 +9,7 @@ meta: Service us
 
        
 <div class="section container">
-<h1 class="section-title">Services articles</h1>
+<h1 class="section-title">Services</h1>
 <div class="grid-2-columns">
 
 {%- for post in collections.services | reverse -%} 
