--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,3 +1,5 @@
+    {% set currentUrl = page.url %}
+    
     <header class="page-header">
   <div class="container">
     <div class="page-header__content">
