--- a/src/services.njk
+++ b/src/services.njk
@@ -13,7 +13,7 @@ meta: Service us
 <h3 class="section-title">Services</h3>
 <div class="grid-2-columns">
 
-{%- for services in collections.services | reverse -%} 
+{%- for posts in collections.services | reverse -%} 
   
 {% include 'services-summary.njk' %}
 {%- endfor -%}
