--- a/src/index.njk
+++ b/src/index.njk
@@ -44,6 +44,17 @@ meta: Homepage stuff
   
   </ul>
   </div>
+    <div class="container flow">
+    <h2 class="section-title text-center ">Service articles</h2>
+    <p class="text-center">Here is a sample of articles which I feel give you a good idea of what this site is all about.</p>
+    <ul role="list" class="articles__list flow">
+  {%- for post in collections.services | reverse | limit(3) -%} 
+  
+{% include 'article-snippet.njk' %}
+  {%- endfor -%}
+  
+  </ul>
+  </div>
 </section> 
  
 
