--- a/src/services.njk
+++ b/src/services.njk
@@ -15,7 +15,7 @@ meta: Service us
 
 {%- for posts in collections.services | reverse -%} 
   
-{% include 'services-summary.njk' %}
+{% include 'blog-summary.njk' %}
 {%- endfor -%}
   
  </div>
