--- a/src/services.njk
+++ b/src/services.njk
@@ -10,7 +10,7 @@ meta: Service us
        
 <div class="section container">
 <h1 class="section-title">Services</h1>
-<h3 class="section-title">Services</h3>
+<h3 class="section-title">Services 3</h3>
 <div class="grid-2-columns">
 
 {%- for posts in collections.featured | reverse -%} 
