--- a/src/contact.njk
+++ b/src/contact.njk
@@ -11,7 +11,7 @@ meta: Contact  us here
 <div class="section container">
 <h1 class="section-title">Recent articles</h1>
 <ul role="list" class="articles__list flow">
-  {%- for post in collections.all | reverse -%} 
+  {%- for post in collections.services | reverse -%} 
   
 {% include 'article-snippet.njk' %}
   {%- endfor -%}
