--- a/src/_includes/article-snippet.njk
+++ b/src/_includes/article-snippet.njk
@@ -1,6 +1,6 @@
 <li>
 <article class="snippet">
-<img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" class="snippet__image">
+<img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" title="{{ post.data.imageAlt }}" class="snippet__image">
 <h3 class="snippet__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
 <p class="snippet__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
 <p class="snippet__body">{{ post.data.description }}</p> 
