--- a/src/_includes/services-detail.njk
+++ b/src/_includes/services-detail.njk
@@ -14,6 +14,9 @@ class: services
     <h1 class="article-title">
     {{ title }}
     </h1>
+        <h1 class="article-title">
+    {{ title }}
+    </h1>
     <figure class="main-article__figure">
       <img src="{{ image }}/tr:w-1000,h-600" alt="{{ imageAlt }}">
       <figcaption>
