--- a/src/_includes/blog-summary.njk
+++ b/src/_includes/blog-summary.njk
@@ -1,14 +1,7 @@
-
-
-
-
-
 <article class="blog-summary">
-<a href="{{ post.url }}"><img class="blog__image" src="{{ post.data.image }}/tr:w-400,h-225" alt="{{ post.data.imageAlt }}" title="{{ post.data.imageAlt }}"></a>
-<h3 class="blog__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
-<p class="blog__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
-<p class="article__body">{{ post.data.description }}</p> 
+<a href="{{ post.url }}"><img src="{{ post.data.image }}/tr:w-400,h-300" alt="{{ post.data.imageAlt }}" title="{{ post.data.imageAlt }}" class="snippet__image"></a>
+<h3 class="snippet__title"><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
+<p class="snippet__meta">by <span>{{ post.data.author }}</span> on <span>{{ post.data.date | postDate }}</span></p>
+<p class="snippet__body">{{ post.data.description }}</p> 
 <a href="{{ post.url }}" class="btn btn--primary">Continue Reading</a>
 </article>
-
-
