--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -10,17 +10,10 @@ class: blog
 
 <article class="main-article">
 <div class="container container--narrow flow">
-  
-    <h1 class="article-title">
-    {{ title }}
-    </h1>
-    <figure class="main-article__figure">
-      <img src="{{ image }}/tr:w-1000,h-600" alt="{{ imageAlt }}">
-      <figcaption>
-     {{ imageAlt }}
-      </figcaption>
-    </figure>
-    
-  {{ content | safe }}
+<h1 class="article-title">{{ title }}</h1>
+<figure class="main-article__figure"><img src="{{ image }}/tr:w-1000,h-600" alt="{{ imageAlt }}">
+<figcaption>{{ imageAlt }}</figcaption>
+</figure>
+{{ content | safe }}
 </div>
 </article>
